--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "~12.1.2",
     "@angular/forms": "~12.1.2",
     "@angular/material": "^12.2.8",
+    "@angular/material-moment-adapter": "^12.2.11",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
